WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58556
[Qt] GraphicsContext3D::getImageData() does not retrieve image data correctly
https://bugs.webkit.org/show_bug.cgi?id=58556
Summary
[Qt] GraphicsContext3D::getImageData() does not retrieve image data correctly
Jarkko Sakkinen
Reported
2011-04-14 11:13:21 PDT
Failing test case: LayoutTests/fast/canvas/webgl/gl-teximage.html
Attachments
layout test diff
(1.38 KB, text/plain)
2011-04-14 23:07 PDT
,
Jarkko Sakkinen
no flags
Details
Load image data when it is unloaded.
(2.51 KB, patch)
2011-05-06 06:19 PDT
,
Jarkko Sakkinen
no flags
Details
Formatted Diff
Diff
Fixed line formatting for packPixels (now everything is in single source code line):
(2.64 KB, patch)
2011-05-06 06:25 PDT
,
Jarkko Sakkinen
kenneth
: review+
kenneth
: commit-queue+
Details
Formatted Diff
Diff
reinterpret_cast
(2.66 KB, patch)
2011-05-08 04:49 PDT
,
Jarkko Sakkinen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jarkko Sakkinen
Comment 1
2011-04-14 11:14:48 PDT
I'm preparing a fix for this.
Jarkko Sakkinen
Comment 2
2011-04-14 23:07:00 PDT
Created
attachment 89740
[details]
layout test diff The layout test has now 100% pass rate but the diff is different (see the attachment).
Jarkko Sakkinen
Comment 3
2011-05-06 06:19:46 PDT
Created
attachment 92576
[details]
Load image data when it is unloaded.
Jarkko Sakkinen
Comment 4
2011-05-06 06:25:42 PDT
Created
attachment 92578
[details]
Fixed line formatting for packPixels (now everything is in single source code line):
Kenneth Rohde Christiansen
Comment 5
2011-05-07 04:50:45 PDT
Comment on
attachment 92578
[details]
Fixed line formatting for packPixels (now everything is in single source code line): should this be up for review?
Jarkko Sakkinen
Comment 6
2011-05-08 04:43:02 PDT
Yes. Forgot to update attachment flags :)
Jarkko Sakkinen
Comment 7
2011-05-08 04:49:41 PDT
Created
attachment 92736
[details]
reinterpret_cast
WebKit Commit Bot
Comment 8
2011-05-08 05:19:03 PDT
Comment on
attachment 92736
[details]
reinterpret_cast Clearing flags on attachment: 92736 Committed
r86026
: <
http://trac.webkit.org/changeset/86026
>
WebKit Commit Bot
Comment 9
2011-05-08 05:19:08 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 10
2011-05-10 13:32:02 PDT
Revision
r86026
cherry-picked into qtwebkit-2.2 with commit 9226105 <
http://gitorious.org/webkit/qtwebkit/commit/9226105
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug