2011-05-08  Jarkko Sakkinen  <jarkko.j.sakkinen@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] GraphicsContext3D::getImageData() does not retrieve image data correctly
        https://bugs.webkit.org/show_bug.cgi?id=58556

        Tests: fast/canvas/webgl/gl-teximage.html

        * platform/graphics/qt/GraphicsContext3DQt.cpp:
        (WebCore::GraphicsContext3D::getImageData):

Canonical link: https://commits.webkit.org/75699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86026 268f45cc-cd09-0410-ab3c-d52691b4dbfc